# 49modman

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: cache-system-m1.md  current-stage.md  dependency-view-m1.md  dependency-view-v1-1.md  launch-system-phase.md  onboarding-flow-phase.md  onboarding-o5-regression-matrix.md  overview-missing-dependency-warning-issue.md  plan-v1.md  profile-manifest-schema-v1.md  profile-pack-storage-phase.md  profile-system-m1.md
scripts/: install-appimage.sh  push-public.mjs  release-linux.mjs  tauri-runner.mjs  version-bump.mjs  version-sync.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_catalog_indexes.sql  0003_profiles.sql  0004_cache_downloads.sql
src-tauri/resources/: v49-reference.json
src-tauri/src/: app_state.rs  error.rs  main.rs
src-tauri/src/commands/: cache.rs  catalog.rs  dependencies.rs  downloads.rs  launch.rs  mod.rs  profiles.rs  reference.rs  settings.rs  system.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: status.rs
src-tauri/src/resources/: bundled_reference.rs  mod.rs
src-tauri/src/services/: cache_service.rs  catalog_service.rs  dependency_service.rs  download_service.rs  launch_service.rs  mod.rs  profile_service.rs  reference_service.rs  settings_service.rs  storage_service.rs
src-tauri/src/thunderstore/: client.rs  models.rs
src/components/: BrowseScreen.svelte  ClearUnreferencedCacheModal.svelte  DependencyModal.svelte  (+20 more)
(+18 files in other folders)
