[package]
name = "modman49"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
